Bug fix + added searching options(search by id and by title)